@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: m_gline.c,v 1.43 2001/07/18 01:37:13 lusky Exp $
+ *  $Id: m_gline.c,v 1.44 2001/08/05 11:55:39 jdc Exp $
  */
 #include "m_commands.h"
 #include "m_gline.h"
@@ -112,7 +112,8 @@ int     m_gline(aClient *cptr,
   aConfItem *aconf;
 #endif
 
-  if(MyClient(sptr)) /* allow remote opers to apply g lines */
+  /* its one of our local clients doing a /gline */
+  if(MyClient(sptr))
     {
 #ifdef GLINES
       /* Only globals can apply Glines */
@@ -177,10 +178,11 @@ int     m_gline(aClient *cptr,
         return 0;
       }
 
+      /* pull the reason from parv[2] and check the glines valid */
+      reason = parv[2];
+      
       if(invalid_gline(sptr, user, host, reason, 1))
         return 0;
-	
-      reason = parv[2];
 
       if (sptr->user && sptr->user->server)
         oper_server = sptr->user->server;
